go_api.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: go-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go_api
  template:
    metadata:
      labels:
        app: go_api
    spec:
      containers:
        - name: go_api
          image: luisarellanomx/go_api
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: go_api-service
spec:
  selector:
    app: go_api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
