mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: go-monog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: go-mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
