ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: api-ingress
spec:
  rules:
    - host: api.larellano.com
      http: 
        paths: 
        - path: /icecream
          pathType: Prefix
          backend: 
            service:
              name: go-api-service
              port:
                number: 80
